--- a/templates/index.html
+++ b/templates/index.html
@@ -1,39 +1,45 @@
 <html>
   <head>
     <title>Todo App</title>
-    <style>
-      ul {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-      }
-
-      .hidden {
-        display: none;
-      }
-    </style>
+    <link rel="stylesheet" type"text/css" href="../static/css/style.css" media="screen"/>
   </head>
+
   <body>
-    <form id='form'>
-      <div>
-        <label for="new-todo">Todo Item</label>
-        <input type="text" id='description' name="description">
-      </div>
-      <div>
-        <input type="submit" value="Enter">
-      </div>
-    </form>
-    <div id="error" class="hidden">Something went wrong!</div>
-    <ul id='todos'>
-      {% for d in data %}
-      <li class='todo-row' data-id="{{ d.id }}">
-        <input class="check-completed" data-id="{{ d.id }}"
-               type="checkbox" {% if d.completed %} checked {% endif %}>
-        {{ d.description }}
-        <button class="deleteBtn" data-id="{{ d.id }}">&cross;</button>
-      </li>
-      {% endfor %}
-    </ul>
+    <section class="lists-wrapper">
+      <ul id="lists">
+        {% for list in lists %}
+        <li>
+          <a href="/lists/{{ list.id }}">
+            {{ list.name }}
+          </a>
+        </li>
+        {% endfor %}
+    </section>
+
+    <section class="todos-wrapper">
+      <h4>{{ active_list.name }}</h4>
+      <form id='form'>
+        <div>
+          <label for="new-todo">Todo Item</label>
+          <input type="text" id='description' name="description">
+        </div>
+        <div>
+          <input type="submit" value="Enter">
+        </div>
+      </form>
+      <div id="error" class="hidden">Something went wrong!</div>
+      <ul id='todos'>
+        {% for todo in todos %}
+        <li class='todo-row' data-id="{{ todo.id }}">
+          <input class="check-completed" data-id="{{ todo.id }}"
+                 type="checkbox" {% if todo.completed %} checked {% endif %}>
+          {{ todo.description }}
+          <button class="deleteBtn" data-id="{{ todo.id }}">&cross;</button>
+        </li>
+        {% endfor %}
+      </ul>
+    </section>
+
     <script src="{{ url_for('static', filename="js/main.js") }}"></script>
 
 </html>
